Prueba integracion ramas form y field

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div>
-  <h1>Pruebas Formulario</h1>    
-  <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
+<div class="container">
+  <h1 class="titulo">Pruebas Formulario</h1>    
+  <app-form class="form" [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
   <!-- <app-field
   [value]="'nombredelaproperty'"
   [type]="13"
