--- a/ui/src/app/shared/components/field/field.component.css
+++ b/ui/src/app/shared/components/field/field.component.css
@@ -1,5 +1,5 @@
-.field {
-    background-color: #f4f4f4;
+/* .field {
+    background-color: #ddd;
     margin:5px;
     padding:10px 20px;
     cursor:pointer;
@@ -25,4 +25,4 @@ justify-content: space-between;
   
   .example-full-width {
     width: 100%;
-  }
+  } */
