--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div>
-  <h1>Pruebas Formulario</h1>    
-  <!-- <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form> -->
-  <app-field
-  [value]="'nombredelaproperty'"
-  [type]="13"
-  [label]="'Select:'"
-  
-  ></app-field>
-</div>    
+<app-tabla-persona></app-tabla-persona>
