--- a/ui/src/app/shared/components/field/field.component.css
+++ b/ui/src/app/shared/components/field/field.component.css
@@ -5,3 +5,13 @@
 mat-form-field {
     width: 100%;
 }
+.input-fecha{
+    display:flex;
+}
+.fecha{
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+.input-monetary{
+    display:flex;
+}
