Genero componentes dialogs, e inyecto el formGen..

--- a/ui/src/app/core/components/tabla-Persona/tabla.component.html
+++ b/ui/src/app/core/components/tabla-Persona/tabla.component.html
@@ -1,6 +1,6 @@
 <app-table
   [servicio]="personaService"
-  [tablaColumnas]="tablaColumnas"
+  [fields]="fields"
   [tablaHead]="tablaHead"
   [editable]="editable"
   [entidad]="entidad"
