--- a/ui/src/app/shared/components/table/table.component.html
+++ b/ui/src/app/shared/components/table/table.component.html
@@ -2,7 +2,7 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--recorro la tablaColumns para setear los variables que ofresca en backend-->
-    <div *ngFor="let i= index;let columna of tablaColumnas">
+    <div *ngFor="let i= index;let columna of fields">
       <!--<div *ngIf="columna.visible==true">-->
         <ng-container   matColumnDef="{{columna.property}}">
           <th mat-header-cell *matHeaderCellDef> {{columna.property}} </th>
@@ -15,7 +15,7 @@
       <th mat-header-cell *matHeaderCellDef> Acciones </th>
       <td mat-cell *matCellDef="let data">
         <div *ngIf="editable==true">
-          <button mat-icon-button  (click)="edit()">
+          <button mat-icon-button  (click)="edit(data)">
             <mat-icon>edit_box</mat-icon>
           </button>
           <button mat-icon-button (click)="delete()">
