--- a/ui/src/app/shared/components/field/field.component.css
+++ b/ui/src/app/shared/components/field/field.component.css
@@ -14,4 +14,24 @@ mat-form-field {
 }
 .input-monetary{
     display:flex;
+    width: 30%;
 }
+
+.example-container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+  }
+  
+  .example-right-align {
+    text-align: right;
+  }
+  
+  input.example-right-align::-webkit-outer-spin-button,
+  input.example-right-align::-webkit-inner-spin-button {
+    display: none;
+  }
+  
+  input.example-right-align {
+    -moz-appearance: textfield;
+  }
+  
+  
