--- a/ui/src/app/shared/components/component-viewer/component-viewer.component.css
+++ b/ui/src/app/shared/components/component-viewer/component-viewer.component.css
@@ -1,3 +1,9 @@
 .component-viewer{
     padding: 2rem 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.component-viewer-header {
+
 }
