--- a/ui/src/app/shared/components/form/form.component.css
+++ b/ui/src/app/shared/components/form/form.component.css
@@ -1,3 +1,13 @@
 #form{
-    width: 50vw;
+    width: 100%;
+}
+
+.form-fields-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-fields-container .form-field {
+    width: 100%;
 }
