Feature/PermisosGruposUsuarios_Inicial/ConConsulta

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<div>
   <h1>Pruebas Formulario</h1>    
-  <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
-</div>-->   
-<app-tabla></app-tabla>
+  <app-form-permisos [entity]="'Persona'" [fields]="fieldPermisos$ | async" id="app"></app-form-permisos>
+</div> --> 
+<app-tabla-permisos></app-tabla-permisos>
