--- a/ui/src/app/core/components/persona-dialog/persona-dialog/persona-dialog.component.html
+++ b/ui/src/app/core/components/persona-dialog/persona-dialog/persona-dialog.component.html
@@ -4,8 +4,16 @@
     <mat-card-subtitle>subtitulo</mat-card-subtitle>
     <mat-card-content>
         <div>
-            <h1>Pruebas Formulario</h1>    
-            <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
+            <h1>Pruebas Formulario</h1>
+            <!--Aca deberiamos ademas de enviar la
+             entidad y los fields.. los datos, 
+             para recuperarlos en los inputs
+            [_dataEnElFormGenerico]="dataDesdeElComponent"-->    
+            <app-form 
+                [entity]="permisos"
+                [fields]="fields$ | async"                
+                id="app">
+            </app-form>
           </div>
     </mat-card-content>
 </mat-card>
