Mejorando Formulario Persona

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--<div>
+<div>
   <h1>Pruebas Formulario</h1>    
   <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
-</div>-->   
-<app-tabla></app-tabla>
+</div>   
+<!-- <app-tabla></app-tabla> -->
