--- a/ui/src/app/shared/components/form/form.component.html
+++ b/ui/src/app/shared/components/form/form.component.html
@@ -1,11 +1,6 @@
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" id="form">
-    <div *ngFor="let field of fields">
-        <app-field [field]="field" [form]="profileForm"></app-field>
-    </div>
-
-    <div>
-        <button mat-raised-button color="primary" type="submit" [disabled]="this.profileForm.invalid">Enviar</button>
-    </div>
+        <app-field *ngFor="let field of fields" [field]="field" [form]="profileForm" class="{{field.property}}"></app-field>
+        <button mat-raised-button class="btn" color="primary" type="submit" [disabled]="this.profileForm.invalid">Enviar</button>
 </form>
 
 <div *ngIf="result">
