--- a/ui/src/app/shared/components/form/form.component.css
+++ b/ui/src/app/shared/components/form/form.component.css
@@ -1,3 +1,36 @@
+#form .id { grid-area: id;}
+#form .nombre { grid-area: nom;}
+#form .apellido { grid-area: ape;}
+#form .fechaNacimiento { grid-area: nac;}
+#form .sexo { grid-area: sexo;}
+#form .email { grid-area: mail;}
+#form .telefono { grid-area: tel;}
+#form .movil { grid-area: movil;}
+#form .fax { grid-area: fax;}
+#form .tipoDocumento { grid-area: tipo;}
+#form .documento { grid-area: doc;}
+#form .callePrincipal { grid-area: calle;}
+#form .calleSecundaria { grid-area: calle2;}
+#form .localidad { grid-area: loc;}
+#form .codigoPostal { grid-area: postal;}
+#form .provincia { grid-area: prov;}
+#form .pais { grid-area: pais;}
+#form .titulo { grid-area: titulo;}
+#form .puesto { grid-area: puesto;}
+#form .btn { grid-area: btn;}
+
+
 #form{
-    width: 50vw;
+    width: 60vw;
+    margin: 0 auto;
+    padding: 1rem;
+    display: grid;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    grid-template-areas: 
+        "id id id id" "nom nom ape ape" "nac nac nac nac" "sexo sexo sexo sexo"
+        "mail mail mail mail" "tel tel tel tel" "movil movil movil movil" "fax fax fax fax"
+        "tipo doc doc doc" "calle calle calle2 calle2" "loc loc loc postal" "prov prov pais pais"
+        "titulo titulo puesto puesto" "btn btn btn btn";
+    outline: 2px solid orange;
 }
